2002-09-14  olicha  <olivier.chapuis@free.fr>

	* libs/PictureGraphics.c (PGraphicsCreateTranslucent):
	Added a function to create translucent pixmaps
	* libs/Colorset.c (CreateBackgroundPixmap):
	A small fix
	* libs/FRender.c (FRenderRender):
	Allows to use the root window as src pixmap

2002-09-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.1.in:
	Fixed open double quotes in ButtonState section

2002-09-13  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in: Add -cmd module timeout information.

2002-09-13  olicha  <olivier.chapuis@free.fr>

	* libs/Colorset.c (CreateBackgroundPixmap):
	(UpdateBackgroundTransparency):
	(SetRectangleBackground):
	* libs/Colorset.h:
	* fvwm/colorset.c (*):
	* fvwm/colorset.h:
	* fvwm/events.c (HandlePropertyNotify):
	Starting implementation of RootTransparent colorset. Worked on
	tinted Transparent colorset. Various colorset parsing fixes.

	* libs/Fft.c (FftDrawString):
	* libs/Flocale.h:
	Added the possibility to draw with a clipping region.

	* libs/FRender.c (FRenderRender):
	* libs/PictureGraphics.c (PGraphicsRenderPixmaps):
	(PCreateRenderPixmap):
	(PGraphicsCreateTransprency):
	(PGraphicsTintRectangle):
	Improve current rendering functions to be able to tint the
	ParentalRelative pixmap or the background of a window.
	Re-enabled XRender rendering.

	* fvwm/borders.c:
	remove a #if 0 debug "render" code

2002-09-13  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/builtins.c (ReadTitleButton):
	* fvwm/screen.h:
	new button state shortcuts AllNormal, AllToggled,
	AllActive, AllInactive, AllUp, AllDown

	* fvwm/module_interface.c:
	minor reformatting

	* acconfig.h:
	possibly fixed compilation with non gcc

2002-09-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (_focus_grab_buttons):
	(__focus_grab_buttons):
	renamed
	(__focus_grab_one_button):
	grab all modifier combinations on client windows by default if
	necessary; this saves a lot of traffic but may grab unnecessary